--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "juicer-express-adapter",
-  "version": "0.6.6-stable",
+  "version": "0.1.0",
   "description": "a high-performance lightweight javascript template engine",
   "homepage": "http://juicer.name",
   "author": "juicer.js authors {badkaikai@gmail.com | http://benben.cc}",
