--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "juicer-express-adapter",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "description": "a high-performance lightweight javascript template engine",
   "homepage": "http://juicer.name",
   "author": "juicer.js authors {badkaikai@gmail.com | http://benben.cc}",
@@ -21,6 +21,7 @@
     "node": ">=0.4.7"
   },
   "dependencies": {
-    "juicer": "^0.6.12"
+    "juicer": "^0.6.13",
+    "lru-cache": "^4.0.0"
   }
 }
